openshiftScripts/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transaction-file-bridge
spec:
  selector:
    app: transaction-file-bridge
  ports:
    - name: http
      port: 8080
      targetPort: 8080
