openshiftScripts/minio-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: minio-console
spec:
  to:
    kind: Service
    name: minio
  port:
    targetPort: 9001
